# habiter

./: .gitignore  Cargo.toml  README.md  metadata.txt
src/: main.rs
src/commands/: create.rs  list.rs  mod.rs  show.rs
src/state/: habit_metadata.rs  habit_occurrence.rs  mod.rs
tests/: cli_tests.rs
