[package]
name = "habiter"
authors = ["Max Diamandopol <diamandopol.andrei10@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0.18", features = ["derive"]}  # For CLI argument parsing
anyhow = "1.0" # For error handling
serde = {version = "1.0", features = ["derive"]}# For serializing to JSON
serde_json = "1.0"
